Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37984

Embedded QWidget-based window doesn't properly handle focus in

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.3.0 RC1
    • 5.2.0, 5.3.0 Beta1
    • Widgets: Main Window
    • Linux X11 (xcb)
    • 0a86c3127241aed93be62c62c3927e9383c95fd1

      Try running the manual test in qtbase/src/tests/manual/xembed-widgets/gtk-embedder.py: you'll see that even if the Qt window is properly embedded and gets keyboad events once you click on it, visually the focus is not indicated (it appears as if all the widgets are still unfocused).

      I traced this down to commit a096b4680dca367ec26725d064eba1df6c37d6b7.
      I have a fix ready, I'll update this bug with the link soon.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mardy Alberto Mardegan
            mardy Alberto Mardegan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes